# offer-search

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  QUICK_START.md  README.md  TESTING.md  TESTS_SUMMARY.md  WINDOWS.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json  vite.config.ts
backend/: .env.example  .env.test  .gitignore  README.md  README_TESTS.md  init-test-db.sql  pyproject.toml  pytest.ini  requirements.txt  test_import.py
backend/app/: database.py  main.py
backend/app/application/dto/: job_dto.py
backend/app/application/use_cases/: get_stats.py  search_jobs.py  submit_jobs.py
backend/app/domain/entities/: job.py
backend/app/domain/exceptions/: job_exceptions.py
backend/app/domain/ports/: job_repository.py
backend/app/infrastructure/: dependencies.py
backend/app/models/: job.py
backend/app/routers/: jobs.py
backend/app/schemas/: job.py
backend/tests/: conftest.py
backend/tests/e2e/: __init__.py  conftest.py
backend/tests/e2e/api/: __init__.py  test_api_endpoints.py
backend/tests/e2e/extension/: __init__.py  test_extension_loading.py
backend/tests/e2e/fixtures/: __init__.py  helpers.py
backend/tests/e2e/pages/: __init__.py  base_page.py  linkedin_page.py
backend/tests/e2e/scraping/: __init__.py  test_linkedin_scraping.py
backend/tests/functional/features/: submit_jobs.feature
backend/tests/functional/step_defs/: test_submit_jobs_steps.py
backend/tests/integration/: test_sqlalchemy_job_repository.py
backend/tests/unit/domain/: test_job_entity.py
docs/: ARCHITECTURE_IMPLEMENTATION_REPORT.md  (+4 more)
(+27 files in other folders)
